added index title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Goals!</title>
+    <title>My Goals!!</title>
   </head>
   <body>
     <h1>Brand new website for my goals<h1>
