added Fire Base API to retrieved data from db

--- a/myGoals/src/index.html
+++ b/myGoals/src/index.html
@@ -11,5 +11,23 @@
 </head>
 <body>
   <app-root></app-root>
+
+
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDPu9HnER0VHNg6Z2Vnv5fBzVVk_KtvLLE",
+      authDomain: "mygoals-angular5.firebaseapp.com",
+      databaseURL: "https://mygoals-angular5.firebaseio.com",
+      projectId: "mygoals-angular5",
+      storageBucket: "mygoals-angular5.appspot.com",
+      messagingSenderId: "630359631393"
+    };
+    firebase.initializeApp(config);
+  </script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 </body>
 </html>
