--- a/myGoals/src/index.html
+++ b/myGoals/src/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="/style.css" type="text/css"> -->
+  <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.css">
+	<link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
 </head>
 <body>
   <app-root></app-root>
