--- a/myGoals/src/index.html
+++ b/myGoals/src/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>MyGoals</title>
-  <base href="/">
+  <!-- <base href="/"> -->
+
+  <base href="stevedang125.github.io/angular5_goals/">;
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
